# advent_of_code_2019

./: pyproject.toml
challenge_1/: __init__.py  module.py  one.py  runner.py  two.py
challenge_10/: runner.py
challenge_2/: __init__.py  module.py  runner.py
challenge_3/: __init__.py  module.py  one.py  runner.py
challenge_4/: module.py  runner.py
challenge_5/: __init__.py  module.py  runner.py
challenge_6/: __init__.py  module.py  runner.py
challenge_7/: __init__.py  intcode_computer.py  module.py  runner.py
challenge_8/: __init__.py  module.py  runner.py
challenge_9/: intcode_computer.py  module.py  runner.py
tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
year_2019/challenge_1/: runner.py
year_2019/challenge_10/: runner.py
year_2019/challenge_2/: module.py  runner.py
year_2019/challenge_3/: __init__.py  module.py  runner.py
year_2019/challenge_4/: __init__.py  module.py  runner.py
year_2019/challenge_5/: __init__.py  module.py  runner.py
year_2019/challenge_6/: module.py  runner.py
year_2019/challenge_7/: __init__.py  intcode_computer.py  module.py  runner.py
year_2019/challenge_8/: module.py  runner.py
year_2019/challenge_9/: intcode_computer.py  module.py  runner.py
year_2019/tests/: test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py
year_2022/challenge_1/: __init__.py  module.py  runner.py
year_2022/challenge_10/: module.py  runner.py
year_2022/challenge_11/: module.py  runner.py
year_2022/challenge_12/: module.py  (+1 more)
(+100 files in other folders)
