[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Stuart Bradley <stuy.bradley@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11"
numpy = "1.23.5"
networkx = "2.8.8"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
pre-commit="2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
